[metadata]
name = DataStructures
description = a personal demo project using data structures and algorithms
author = Zakaria Oussalem
licence = MIT
licence_file = LICENCE 
platforms =  win32
classifiers = 
    programlming Language :: Python :: 3.9

[options]
packages = 
    BasicDataStructures
    SortingAlgorithms
install_requires =
    requests>=2
python_requires = >=3
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
BasicDataStructures = py.typed
SortingAlgorithms = py.typed

[flake8]
max-line-length = 160